fix: add overflow hidden

--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@
 .card__info {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 
     padding: 16px 32px 16px 32px;
 
@@ -32,6 +33,8 @@
 
 .card__content{
     flex: 1 0 auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
 }
 
@@ -76,7 +79,6 @@
 .card__tags {
     display: flex;
     flex-wrap: nowrap;
-    overflow: hidden;
     gap: 12px;
 
     margin-bottom: 16px;
